[tool.poetry]
name = "utils-python"
version = "1.18.0"
description = ""
authors = ["qwrwed <2429893+qwrwed@users.noreply.github.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
filedate = "^3.0"
mutagen = "^1.47.0"
requests = "^2.31.3"
tqdm = "^4.66.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip_gitignore = true
profile = "black"
