[project]
name = "utils-python"
description = ""
version = "1.26.0"
authors = [
    { name = "qwrwed", email = "2429893+qwrwed@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "filedate (>=3.0,<4.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "requests (>=2.31.3,<3.0.0)",
    "tqdm (>=4.66.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core (>=2.0.0,<3.0.0)"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip_gitignore = true
profile = "black"
